07-istio/faulinjection/app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 50
    route:
    - destination:
        host: myapp
        subset: v2
      weight: 50

  - route:
    - destination:
        host: myapp
        subset: v1
      weight: 50
